--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "replicate": "^0.27.1",
     "stripe": "^14.18.0",
